-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Fully Compatible
-
ALL
-
Execution Team 2021-04-05
-
None
-
None
-
None
-
None
-
None
-
None
-
None
collMod can be used to change expireAfterSeconds collection clustered by _id. We do not currently update the TTLCollectionCache when a clustered collection's expireAfterSeconds changes "off" to a numeric value.
Moving from a numeric expireAfterSeconds to "off" works because we lazily unregister collections that are no longer TTL.