SERVER-55499 TTL monitor needs to be updated when a clustered collection is made TTL from collMod